# utils

./: .gitignore  CHANGELOG.md  Pipfile  setup.cfg
docs/: CNAME  _coverpage.md  _sidebar.md  decode.md  encode.md  file.md  index.html  lists.md  persian.md  strings.md  urls.md
src/utils/: list.py
utils/: decode.py
utils/persian/: __init__.py  digits.py  letters.py
