[metadata]
name = utils-aazerra
version = attr: utils.VERSION
description = Personal utility functions
long_description = file: README.md, CHANGELOG, LICENSE
keywords = utils, utility, functions
license = MIT
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/aazerra/toolbox-py
maintainer = Alireza Rabie
maintainer_email = alirezarabie793@gmail.com

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

