[metadata]
name = utils-azr
version = attr: utils.VERSION
description = Personal utility functions
long_description = file: README.md, CHANGELOG, LICENSE
keywords = utils, utility, functions
license = MIT
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/aazerra/utils
maintainer = Alireza Rabie
maintainer_email = alireza@aazerra.dev

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

